fix_auth & vercel.json

--- a/public/examples/Admin/dsvtden.html
+++ b/public/examples/Admin/dsvtden.html
@@ -95,7 +95,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/auth/logout">
+                                <a class="nav-link" href="/api/auth/logout">
                                     <span class="no-icon">Log out</span>
                                 </a>
                             </li>
