--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 			};
 
 			// Gửi dữ liệu đăng nhập tới máy chủ
-			fetch('/auth/login', {
+			fetch('/api/auth/login', {
 				method: 'POST',
 				headers: {
 					'Content-Type': 'application/json'
