--- a/public/examples/Admin/ds_thanhvien.html
+++ b/public/examples/Admin/ds_thanhvien.html
@@ -67,7 +67,7 @@
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item"><a class="nav-link" href="#pablo"><span
                                         class="no-icon">Account</span></a></li>
-                            <li class="nav-item"><a class="nav-link" href="/auth/logout"><span class="no-icon">Log
+                            <li class="nav-item"><a class="nav-link" href="/api/auth/logout"><span class="no-icon">Log
                                         out</span></a></li>
                         </ul>
                     </div>
