--- a/public/examples/Admin/user.html
+++ b/public/examples/Admin/user.html
@@ -157,7 +157,7 @@
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/auth/logout">
+                                <a class="nav-link" href="/api/auth/logout">
                                     <span class="no-icon">Log out</span>
                                 </a>
                             </li>
